apps/base/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: radarr
spec:
  selector:
    app: radarr
  ports:
    - name: http
      protocol: TCP
      port: 7878
      targetPort: 7878
